--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
       <section class="Section-about-me" id="About-me">
         <div>
-          <img class="Hugo" src="/Img/Hugo.jpg" alt="A Brand Image of Hugo" />
+          <img class="Hugo" src="Img/Hugo.jpg" alt="A Brand Image of Hugo" />
         </div>
         <div class="Text">
           <p>
