--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
             <div>
               <img
                 class="templates-1"
-                src="/Img/template 1.png"
-                alt="A Brand Image of Hugo"
+                src="Img/template 1.png"
+                alt="template4"
               />
             </div>
             <div>
               <img
                 class="templates-2"
-                src="/Img/template 1.png"
-                alt="A Brand Image of Hugo"
+                src="Img/template 1.png"
+                alt="template4"
               />
             </div>
           </div>
@@ -158,7 +158,7 @@
             <div class="template4">
               <img
                 class="templates-4"
-                src="/Img/template 1.png"
+                src="Img/template 1.png"
                 alt="template4"
               />
               <div class="middle">
