--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               </div>
             </div>
             <div class="templates-5">
-              <img src="/Img/template 1.png" alt="A Brand Image of Hugo" />
+              <img src="Img/template 1.png" alt="A Brand Image of Hugo" />
             </div>
           </div>
 
@@ -177,10 +177,10 @@
               <img src="/Img/template 1.png" alt="A Brand Image of Hugo" />
             </div> -->
             <div class="templates-8">
-              <img src="/Img/template 1.png" alt="A Brand Image of Hugo" />
+              <img src="Img/template 1.png" alt="A Brand Image of Hugo" />
             </div>
             <div class="templates-9">
-              <img src="/Img/template 1.png" alt="A Brand Image of Hugo" />
+              <img src="Img/template 1.png" alt="A Brand Image of Hugo" />
             </div>
           </div>
         </div>
@@ -189,7 +189,7 @@
       <section class="Section-about-me" id="About-me">
         <div class="card">
           <div>
-            <img class="Hugo" src="/Img/Hugo.jpg" alt="A Brand Image of Hugo" />
+            <img class="Hugo" src="Img/Hugo.jpg" alt="A Brand Image of Hugo" />
           </div>
           <div class="Text">
             <p>
